--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "e2cd4b8d-faed-45d7-a962-18c54be26534"
   },
   "newProjectRoot": "projects",
   "projects": {
